# projCpp

./: CMakeLists.txt  main.cpp
